<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.projects.nosleepreader.ReaderActivity">
    <item
        android:id="@+id/open_url_in_browser"
        android:title="@string/menu_reader_open_url_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reader_favorite"
        android:title="@string/add_to_favorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/reader_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="Share"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
